--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="box">
         </div>
         <div class="hero">
-            <span>Unlimited movies, TV shows and more</span>
+            <span>Lorem ipsum dolor sit amet.</span>
             <span>Starts at ₹149. Cancel at any time.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div>
