add media query this project

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <section class="first">
-        <p class="trending">Trending Now</p>
+        <p class="trending first-heading">Trending Now</p>
         <div class="film_img">
             <div class="content"><img src="netflix/background_imgage1.png" alt=""><p>1</p></div>
             <div class="content"><img src="netflix/background_image2.png" alt=""><p>2</p></div>
@@ -43,7 +43,7 @@
             <div class="content"><img src="netflix/background_image5.png" alt=""><p>5</p></div>
         </div>
     </section>
-    <p class="trending" style="margin-top: 40px;">More reasons to join</p>
+    <p class="trending second-para" style="margin-top: 40px;">More reasons to join</p>
     <section class="second">
         <div class="content2">
             <div class="heading">Enjoy on your TV</div>
@@ -66,7 +66,7 @@
             <div class="images2 img4"><img src="netflix/clone4.png" alt=""></div>
         </div>
     </section>
-    <p class="trending" style="margin-bottom: -23px;">Frequently Asked Questions</p>
+    <p class="trending third-para" style="margin-bottom: -23px;">Frequently Asked Questions</p>
     <section class="third">
         <div class="boxes">
             <div class="question"><p>What is Netflix?</p></div>
