Add some box and background-color

--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AAyush  chaudhary </title>
+    <title>priyanshu choudhary </title>
 </head>
+<style>
+    .container{
+        
+        height: 50vh;
+        width: 90vw;
+        background-color: lightcyan;
+        display: flex;
+
+    }
+    .box{
+        margin: auto;
+        height: 56px;
+        width: 56px;
+        border: 2px solid black;
+        background-color: #00ffff;    }
+</style>
 <body>
-    
+    <div class="container">
+        <div class="box">Box1</div>
+        <div class="box">Box2</div>
+        <div class="box">Box3</div>
+        <div class="box">Box4</div>
+        <div class="box">Box5</div>
+    </div>
 </body>
 </html>
